# ai-operating-center

./: LICENSE  README.md
Downloads/Linux-XRay (2)/Linux-XRay/: .clang-format  .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  LICENSE  need_do_it_first.txt
Downloads/Linux-XRay (2)/Linux-XRay/ai/: anomaly_detector.py  behavior_analysis.py  ollama_client.py  requirements.txt
Downloads/Linux-XRay (2)/Linux-XRay/benchmarks/: CMakeLists.txt  event_benchmark.cpp
Downloads/Linux-XRay (2)/Linux-XRay/cli/: CMakeLists.txt  xray.cpp  xray_monitor.cpp  xray_top.cpp
Downloads/Linux-XRay (2)/Linux-XRay/cmake/: Common.cmake  FindBpfObject.cmake  FindLibBpf.cmake
Downloads/Linux-XRay (2)/Linux-XRay/database/: CMakeLists.txt  database.cpp  database.hpp  schema.sql
Downloads/Linux-XRay (2)/Linux-XRay/docs/: ARCHITECTURE.md  README.md
Downloads/Linux-XRay (2)/Linux-XRay/engine/: CMakeLists.txt  cache.cpp  cache.hpp  event.cpp  event.hpp  event_bus.cpp  event_bus.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_filter.cpp  event_filter.hpp  serializer.cpp  serializer.hpp  timestamp_engine.cpp  timestamp_engine.hpp
Downloads/Linux-XRay (2)/Linux-XRay/examples/: basic_usage.md  plugin_example.md
Downloads/Linux-XRay (2)/Linux-XRay/graph/: CMakeLists.txt  edge.cpp  edge.hpp  graph.cpp  graph.hpp  graph_renderer.hpp  layout_engine.cpp  layout_engine.hpp  node.cpp  node.hpp
Downloads/Linux-XRay (2)/Linux-XRay/gui/: 3d_viewport.cpp  3d_viewport.hpp  CMakeLists.txt  dashboard.cpp  dashboard.hpp  file_view.cpp  file_view.hpp  inspector_panel.cpp  inspector_panel.hpp  main.cpp  main_window.cpp  main_window.hpp  network_view.cpp  network_view.hpp  process_view.cpp  process_view.hpp  timeline_widget.cpp  timeline_widget.hpp
Downloads/Linux-XRay (2)/Linux-XRay/kernel/: CMakeLists.txt  common_defs.h  ebpf_loader.cpp  ebpf_loader.hpp  file_tracker.bpf.c  network_tracker.bpf.c  process_tracker.bpf.c  vmlinux.h
Downloads/Linux-XRay (2)/Linux-XRay/plugins/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.hpp
Downloads/Linux-XRay (2)/Linux-XRay/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  gl_renderer.cpp  gl_renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
Downloads/Linux-XRay (2)/Linux-XRay/scripts/: build.sh  install_deps.sh  setup_env.sh
Downloads/Linux-XRay (2)/Linux-XRay/sdk/examples/: sample_plugin.cpp
Downloads/Linux-XRay (2)/Linux-XRay/sdk/include/xray/sdk/: plugin_interface.hpp
Downloads/Linux-XRay (2)/Linux-XRay/security/: CMakeLists.txt  security_analyzer.cpp  security_analyzer.hpp  threat_detector.hpp
Downloads/Linux-XRay (2)/Linux-XRay/tests/: CMakeLists.txt  test_event_engine.cpp  test_graph.cpp
Downloads/ai_ops_center/: .gitignore  requirements.txt  run.py
Downloads/ai_ops_center/agents/: critic_agent.py  documentation_agent.py  linux_agent.py  memory_agent.py  research_agent.py  scheduler_agent.py
Downloads/ai_ops_center/core/: agent_factory.py  ollama_client.py
Downloads/ai_ops_center/database/: __init__.py
Downloads/ai_ops_center/routes/: agent_api.py  api.py  main.py
Downloads/ai_ops_center/services/: project_service.py
Downloads/ai_ops_center/templates/: agents.html  base.html  login.html
ai_ops_center/: README.md  app.py  config.py  start.sh
ai_ops_center/agents/: agent_factory_agent.py  architect_agent.py  ceo_agent.py  coding_agent.py  critic_agent.py  debug_agent.py  documentation_agent.py  git_agent.py  learning_agent.py  linux_agent.py  memory_agent.py  monitor_agent.py  notification_agent.py  performance_agent.py  planner_agent.py  plugin_manager.py  research_agent.py  review_agent.py  scheduler_agent.py  security_agent.py  terminal_agent.py  testing_agent.py
ai_ops_center/core/: agent_base.py
ai_ops_center/database/: models.py
ai_ops_center/services/: monitor_service.py  task_service.py  terminal_service.py
ai_ops_center/templates/: dashboard.html  memory.html  projects.html  settings.html
